message send to message

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 </body>
 <footer
     style="background-color:  #ebe5e5; height: 30vh; text-align: center; justify-content: center;font-family: 'Yanone Kaffeesatz', sans-serif;">
-    <p style="padding-top: 80px; font-size: 30px; color: black;">Thanks For Everything</p>
+    <p style="padding-top: 80px; font-size: 30px; color: black;">Thanks For Scrooling</p>
     <div class="social-icon">
         <a href="#"><i class="fab fa-facebook"></i></a>
         <a href="#"><i class="fab fa-youtube"></i></a>
