--- a/index.html
+++ b/index.html
@@ -77,30 +77,30 @@
             <div class="image">
                 <div class="image1">
                     <figure>
-                        <img src="img/gallery/img1.jpg" alt="image 1">
+                        <img src="img/Gallery/img1.jpg" alt="image 1">
                     </figure>
                     <figure>
-                        <img src="img/gallery/img2.jpg" alt="image 1">
+                        <img src="img/Gallery/img2.jpg" alt="image 1">
                     </figure>
                     <figure>
-                        <img src="img/gallery/img3.jpg" alt="image 1">
+                        <img src="img/Gallery/img3.jpg" alt="image 1">
                     </figure>
                     <figure>
-                        <img src="img/gallery/img4.jpg" alt="image 1">
+                        <img src="img/Gallery/img4.jpg" alt="image 1">
                     </figure>
                 </div>
                 <div class="image2">
                     <figure>
-                        <img src="img/gallery/img5.jpg" alt="image 1">
+                        <img src="img/Gallery/img5.jpg" alt="image 1">
                     </figure>
                     <figure>
-                        <img src="img/gallery/img6.jpg" alt="image 1">
+                        <img src="img/Gallery/img6.jpg" alt="image 1">
                     </figure>
                     <figure>
-                        <img src="img/gallery/img7.jpg" alt="image 1">
+                        <img src="img/Gallery/img7.jpg" alt="image 1">
                     </figure>
                     <figure>
-                        <img src="img/gallery/img8.jpg" alt="image 1">
+                        <img src="img/Gallery/img8.jpg" alt="image 1">
                     </figure>
                 </div>
             </div>
